@@ -44,6 +44,8 @@ Version 1.4.18 - 11 May 2009
   - Converted Czech (cs_CZ) to UTF-8.
   - Converted Hungarian (hu_HU) to UTF-8.
   - Added Khmer translation (Thanks to Khoem Sokhem).
+  - Remove ability for HTML emails to use CSS positioning to overlay
+    SquirrelMail content (Thanks to Luc Beurton). (#2723196) [CVE-2009-1581]
 
 Version 1.4.17 - 03 December 2008
 ---------------------------------
